--- a/src/main/java/adm/WinListaHospedes.form
+++ b/src/main/java/adm/WinListaHospedes.form
@@ -89,13 +89,18 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel4">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\monari\Documents\NetBeansProjects\HotelHub-main\images\loguilho-hotilho.png"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="ADICIONAR QUARTO E SERVI&#xc7;OS"/>
+            <Property name="text" type="java.lang.String" value="LISTA DE H&#xd3;SPEDES"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
